--- a/mod/area/gabel_bognerk.git.yml
+++ b/mod/area/gabel_bognerk.git.yml
@@ -59,7 +59,7 @@ Placeable List:
     LocName: 
       type: :cexolocstr
       value: 
-        0: "\xDCbungspuppe"
+        0: Ziel (Stoff)
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
@@ -122,7 +122,7 @@ Placeable List:
     LocName: 
       type: :cexolocstr
       value: 
-        0: Armor_Stand_1
+        0: Ziel (Leder)
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
@@ -185,7 +185,7 @@ Placeable List:
     LocName: 
       type: :cexolocstr
       value: 
-        0: Armor_Stand_2
+        0: Ziel (Kettenpanzer)
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
@@ -231,7 +231,7 @@ Placeable List:
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 15}
+    CurrentHP: {type: :short, value: 150}
     Description: 
       type: :cexolocstr
       str_ref: 14547
@@ -240,8 +240,8 @@ Placeable List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    HP: {type: :short, value: 15}
-    Hardness: {type: :byte, value: 5}
+    HP: {type: :short, value: 150}
+    Hardness: {type: :byte, value: 50}
     HasInventory: {type: :byte, value: 0}
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: ""}
@@ -269,11 +269,11 @@ Placeable List:
     OnUsed: {type: :resref, value: ""}
     OnUserDefined: {type: :resref, value: ""}
     OpenLockDC: {type: :byte, value: 18}
-    Plot: {type: :byte, value: 0}
+    Plot: {type: :byte, value: 1}
     PortraitId: {type: :word, value: 390}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: Archery Target}
+    Static: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: ArcheryTarget}
     TemplateResRef: {type: :resref, value: plc_archtarget}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -282,7 +282,7 @@ Placeable List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 0}
+    Useable: {type: :byte, value: 1}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 15.0915}
     Y: {type: :float, value: 40.4216}
@@ -296,7 +296,7 @@ Placeable List:
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 15}
+    CurrentHP: {type: :short, value: 150}
     Description: 
       type: :cexolocstr
       str_ref: 14547
@@ -305,8 +305,8 @@ Placeable List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    HP: {type: :short, value: 15}
-    Hardness: {type: :byte, value: 5}
+    HP: {type: :short, value: 150}
+    Hardness: {type: :byte, value: 50}
     HasInventory: {type: :byte, value: 0}
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: ""}
@@ -334,10 +334,10 @@ Placeable List:
     OnUsed: {type: :resref, value: ""}
     OnUserDefined: {type: :resref, value: ""}
     OpenLockDC: {type: :byte, value: 18}
-    Plot: {type: :byte, value: 0}
+    Plot: {type: :byte, value: 1}
     PortraitId: {type: :word, value: 1080}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 1}
+    Static: {type: :byte, value: 0}
     Tag: {type: :cexostr, value: x3_plc_archtarg}
     TemplateResRef: {type: :resref, value: x3_plc_archtarg}
     TrapDetectDC: {type: :byte, value: 0}
@@ -347,7 +347,7 @@ Placeable List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 0}
+    Useable: {type: :byte, value: 1}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 17.2961}
     Y: {type: :float, value: 40.4258}
@@ -361,7 +361,7 @@ Placeable List:
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 15}
+    CurrentHP: {type: :short, value: 150}
     Description: 
       type: :cexolocstr
       str_ref: 14547
@@ -370,8 +370,8 @@ Placeable List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    HP: {type: :short, value: 15}
-    Hardness: {type: :byte, value: 5}
+    HP: {type: :short, value: 150}
+    Hardness: {type: :byte, value: 50}
     HasInventory: {type: :byte, value: 0}
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: ""}
@@ -399,11 +399,11 @@ Placeable List:
     OnUsed: {type: :resref, value: ""}
     OnUserDefined: {type: :resref, value: ""}
     OpenLockDC: {type: :byte, value: 18}
-    Plot: {type: :byte, value: 0}
+    Plot: {type: :byte, value: 1}
     PortraitId: {type: :word, value: 390}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: Archery Target}
+    Static: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: ArcheryTarget}
     TemplateResRef: {type: :resref, value: plc_archtarget}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -412,7 +412,7 @@ Placeable List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 0}
+    Useable: {type: :byte, value: 1}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 19.6461}
     Y: {type: :float, value: 40.4447}
@@ -547,230 +547,6 @@ Placeable List:
     X: {type: :float, value: 22.343}
     Y: {type: :float, value: 19.1957}
     Z: {type: :float, value: -0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 9
-    AnimationState: {type: :byte, value: 0}
-    Appearance: {type: :dword, value: 265}
-    AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
-    BodyBag: {type: :byte, value: 0}
-    CloseLockDC: {type: :byte, value: 0}
-    Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 10}
-    Description: 
-      type: :cexolocstr
-      value: {}
-
-    DisarmDC: {type: :byte, value: 0}
-    Faction: {type: :dword, value: 1}
-    Fort: {type: :byte, value: 5}
-    HP: {type: :short, value: 10}
-    Hardness: {type: :byte, value: 5}
-    HasInventory: {type: :byte, value: 0}
-    Interruptable: {type: :byte, value: 1}
-    ItemList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        AddCost: {type: :dword, value: 1}
-        BaseItem: {type: :int, value: 15}
-        Charges: {type: :byte, value: 0}
-        Cost: {type: :dword, value: 13}
-        Cursed: {type: :byte, value: 0}
-        DescIdentified: 
-          type: :cexolocstr
-          value: {}
-
-        Description: 
-          type: :cexolocstr
-          value: {}
-
-        Identified: {type: :byte, value: 1}
-        LocalizedName: 
-          type: :cexolocstr
-          str_ref: 180
-          value: {}
-
-        ModelPart1: {type: :byte, value: 0}
-        Plot: {type: :byte, value: 0}
-        PropertiesList: 
-          type: :list
-          value: 
-          - !nwn-lib.elv.es,2008-12/struct 
-            __struct_id: 0
-            ChanceAppear: {type: :byte, value: 100}
-            CostTable: {type: :byte, value: 18}
-            CostValue: {type: :word, value: 4}
-            Param1: {type: :byte, value: 9}
-            Param1Value: {type: :byte, value: 1}
-            PropertyName: {type: :word, value: 44}
-            Subtype: {type: :word, value: 0}
-        Repos_PosX: {type: :word, value: 0}
-        Repos_Posy: {type: :word, value: 0}
-        StackSize: {type: :word, value: 1}
-        Stolen: {type: :byte, value: 0}
-        Tag: {type: :cexostr, value: NW_IT_TORCH001}
-        TemplateResRef: {type: :resref, value: nw_it_torch001}
-        XOrientation: {type: :float, value: 0.0}
-        XPosition: {type: :float, value: -1.0}
-        YOrientation: {type: :float, value: 1.0}
-        YPosition: {type: :float, value: -1.0}
-        ZPosition: {type: :float, value: -1.0}
-    KeyName: {type: :cexostr, value: ""}
-    KeyRequired: {type: :byte, value: 0}
-    LocName: 
-      type: :cexolocstr
-      value: 
-        0: Fackelhalter
-    Lockable: {type: :byte, value: 1}
-    Locked: {type: :byte, value: 0}
-    OnClick: {type: :resref, value: ""}
-    OnClosed: {type: :resref, value: ""}
-    OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnInvDisturbed: {type: :resref, value: ""}
-    OnLock: {type: :resref, value: ""}
-    OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: ""}
-    OnSpellCastAt: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 0}
-    Plot: {type: :byte, value: 1}
-    PortraitId: {type: :word, value: 423}
-    Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: Fackelhalter_ohne_Umgebungslicht}
-    TemplateResRef: {type: :resref, value: blueprint008}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 1}
-    Will: {type: :byte, value: 0}
-    X: {type: :float, value: 21.9005}
-    Y: {type: :float, value: 42.0254}
-    Z: {type: :float, value: -0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 9
-    AnimationState: {type: :byte, value: 0}
-    Appearance: {type: :dword, value: 265}
-    AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
-    BodyBag: {type: :byte, value: 0}
-    CloseLockDC: {type: :byte, value: 0}
-    Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 10}
-    Description: 
-      type: :cexolocstr
-      value: {}
-
-    DisarmDC: {type: :byte, value: 0}
-    Faction: {type: :dword, value: 1}
-    Fort: {type: :byte, value: 5}
-    HP: {type: :short, value: 10}
-    Hardness: {type: :byte, value: 5}
-    HasInventory: {type: :byte, value: 0}
-    Interruptable: {type: :byte, value: 1}
-    ItemList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        AddCost: {type: :dword, value: 1}
-        BaseItem: {type: :int, value: 15}
-        Charges: {type: :byte, value: 0}
-        Cost: {type: :dword, value: 13}
-        Cursed: {type: :byte, value: 0}
-        DescIdentified: 
-          type: :cexolocstr
-          value: {}
-
-        Description: 
-          type: :cexolocstr
-          value: {}
-
-        Identified: {type: :byte, value: 1}
-        LocalizedName: 
-          type: :cexolocstr
-          str_ref: 180
-          value: {}
-
-        ModelPart1: {type: :byte, value: 0}
-        Plot: {type: :byte, value: 0}
-        PropertiesList: 
-          type: :list
-          value: 
-          - !nwn-lib.elv.es,2008-12/struct 
-            __struct_id: 0
-            ChanceAppear: {type: :byte, value: 100}
-            CostTable: {type: :byte, value: 18}
-            CostValue: {type: :word, value: 4}
-            Param1: {type: :byte, value: 9}
-            Param1Value: {type: :byte, value: 1}
-            PropertyName: {type: :word, value: 44}
-            Subtype: {type: :word, value: 0}
-        Repos_PosX: {type: :word, value: 0}
-        Repos_Posy: {type: :word, value: 0}
-        StackSize: {type: :word, value: 1}
-        Stolen: {type: :byte, value: 0}
-        Tag: {type: :cexostr, value: NW_IT_TORCH001}
-        TemplateResRef: {type: :resref, value: nw_it_torch001}
-        XOrientation: {type: :float, value: 0.0}
-        XPosition: {type: :float, value: -1.0}
-        YOrientation: {type: :float, value: 1.0}
-        YPosition: {type: :float, value: -1.0}
-        ZPosition: {type: :float, value: -1.0}
-    KeyName: {type: :cexostr, value: ""}
-    KeyRequired: {type: :byte, value: 0}
-    LocName: 
-      type: :cexolocstr
-      value: 
-        0: Fackelhalter
-    Lockable: {type: :byte, value: 1}
-    Locked: {type: :byte, value: 0}
-    OnClick: {type: :resref, value: ""}
-    OnClosed: {type: :resref, value: ""}
-    OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnInvDisturbed: {type: :resref, value: ""}
-    OnLock: {type: :resref, value: ""}
-    OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: ""}
-    OnSpellCastAt: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 0}
-    Plot: {type: :byte, value: 1}
-    PortraitId: {type: :word, value: 423}
-    Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: Fackelhalter_ohne_Umgebungslicht}
-    TemplateResRef: {type: :resref, value: blueprint008}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 1}
-    Will: {type: :byte, value: 0}
-    X: {type: :float, value: 8.2542}
-    Y: {type: :float, value: 42.1278}
-    Z: {type: :float, value: -0.0}
 SoundList: 
   type: :list
   value: []
@@ -781,9 +557,94 @@ StoreList:
 
 TriggerList: 
   type: :list
-  value: []
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    AutoRemoveKey: {type: :byte, value: 0}
+    Cursor: {type: :byte, value: 1}
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: -1.82530403137207}
+        PointY: {type: :float, value: 0.653829574584961}
+        PointZ: {type: :float, value: 0.138998061418533}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0}
+        PointY: {type: :float, value: 0.0}
+        PointZ: {type: :float, value: 0.199851781129837}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.315060615539551}
+        PointY: {type: :float, value: 0.34712028503418}
+        PointZ: {type: :float, value: 0.0546960458159447}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: -1.71770000457764}
+        PointY: {type: :float, value: 1.08608818054199}
+        PointZ: {type: :float, value: 0.025000000372529}
+    HighlightHeight: {type: :float, value: 0.0}
+    KeyName: {type: :cexostr, value: ""}
+    LinkedTo: {type: :cexostr, value: bognerei_keller}
+    LinkedToFlags: {type: :byte, value: 1}
+    LoadScreenID: {type: :word, value: 0}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14760
+      value: {}
 
+    OnClick: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    PortraitId: {type: :word, value: 0}
+    ScriptHeartbeat: {type: :resref, value: ""}
+    ScriptOnEnter: {type: :resref, value: ""}
+    ScriptOnExit: {type: :resref, value: ""}
+    ScriptUserDefine: {type: :resref, value: ""}
+    Tag: {type: :cexostr, value: keller_bognerei}
+    TemplateResRef: {type: :resref, value: newtransition}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :int, value: 1}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 13.1765}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 16.0058}
+    ZOrientation: {type: :float, value: 0.0}
+    ZPosition: {type: :float, value: 0.0}
 WaypointList: 
   type: :list
-  value: []
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
 
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_keller_bognerei}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 12.4214}
+    YOrientation: {type: :float, value: 1.0}
+    YPosition: {type: :float, value: 16.5489}
+    ZPosition: {type: :float, value: 0.1124}
