--- a/mod/area/gabel_bogner.git.yml
+++ b/mod/area/gabel_bogner.git.yml
@@ -19,11 +19,30 @@ Creature List:
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 4
-    Appearance_Type: {type: :word, value: 247}
+    Appearance_Head: {type: :byte, value: 123}
+    Appearance_Type: {type: :word, value: 1}
+    ArmorPart_RFoot: {type: :byte, value: 1}
     BodyBag: {type: :byte, value: 0}
+    BodyPart_Belt: {type: :byte, value: 0}
+    BodyPart_LBicep: {type: :byte, value: 1}
+    BodyPart_LFArm: {type: :byte, value: 1}
+    BodyPart_LFoot: {type: :byte, value: 1}
+    BodyPart_LHand: {type: :byte, value: 1}
+    BodyPart_LShin: {type: :byte, value: 1}
+    BodyPart_LShoul: {type: :byte, value: 0}
+    BodyPart_LThigh: {type: :byte, value: 1}
+    BodyPart_Neck: {type: :byte, value: 1}
+    BodyPart_Pelvis: {type: :byte, value: 1}
+    BodyPart_RBicep: {type: :byte, value: 1}
+    BodyPart_RFArm: {type: :byte, value: 1}
+    BodyPart_RHand: {type: :byte, value: 1}
+    BodyPart_RShin: {type: :byte, value: 1}
+    BodyPart_RShoul: {type: :byte, value: 0}
+    BodyPart_RThigh: {type: :byte, value: 1}
+    BodyPart_Torso: {type: :byte, value: 1}
     CRAdjust: {type: :int, value: 0}
     Cha: {type: :byte, value: 12}
-    ChallengeRating: {type: :float, value: 0.5}
+    ChallengeRating: {type: :float, value: 1.0}
     ClassList: 
       type: :list
       value: 
@@ -31,6 +50,10 @@ Creature List:
         __struct_id: 2
         Class: {type: :int, value: 7}
         ClassLevel: {type: :short, value: 1}
+    Color_Hair: {type: :byte, value: 31}
+    Color_Skin: {type: :byte, value: 0}
+    Color_Tattoo1: {type: :byte, value: 1}
+    Color_Tattoo2: {type: :byte, value: 1}
     Con: {type: :byte, value: 8}
     Conversation: {type: :resref, value: ""}
     CurrentHitPoints: {type: :short, value: 10}
@@ -49,29 +72,29 @@ Creature List:
         __struct_id: 2
         AddCost: {type: :dword, value: 0}
         ArmorPart_Belt: {type: :byte, value: 0}
-        ArmorPart_LBicep: {type: :byte, value: 4}
-        ArmorPart_LFArm: {type: :byte, value: 16}
-        ArmorPart_LFoot: {type: :byte, value: 4}
+        ArmorPart_LBicep: {type: :byte, value: 1}
+        ArmorPart_LFArm: {type: :byte, value: 1}
+        ArmorPart_LFoot: {type: :byte, value: 6}
         ArmorPart_LHand: {type: :byte, value: 1}
-        ArmorPart_LShin: {type: :byte, value: 8}
-        ArmorPart_LShoul: {type: :byte, value: 15}
-        ArmorPart_LThigh: {type: :byte, value: 4}
+        ArmorPart_LShin: {type: :byte, value: 9}
+        ArmorPart_LShoul: {type: :byte, value: 0}
+        ArmorPart_LThigh: {type: :byte, value: 3}
         ArmorPart_Neck: {type: :byte, value: 1}
-        ArmorPart_Pelvis: {type: :byte, value: 8}
-        ArmorPart_RBicep: {type: :byte, value: 4}
-        ArmorPart_RFArm: {type: :byte, value: 16}
-        ArmorPart_RFoot: {type: :byte, value: 4}
+        ArmorPart_Pelvis: {type: :byte, value: 37}
+        ArmorPart_RBicep: {type: :byte, value: 1}
+        ArmorPart_RFArm: {type: :byte, value: 1}
+        ArmorPart_RFoot: {type: :byte, value: 6}
         ArmorPart_RHand: {type: :byte, value: 1}
-        ArmorPart_RShin: {type: :byte, value: 8}
-        ArmorPart_RShoul: {type: :byte, value: 15}
-        ArmorPart_RThigh: {type: :byte, value: 4}
+        ArmorPart_RShin: {type: :byte, value: 9}
+        ArmorPart_RShoul: {type: :byte, value: 0}
+        ArmorPart_RThigh: {type: :byte, value: 3}
         ArmorPart_Robe: {type: :byte, value: 0}
-        ArmorPart_Torso: {type: :byte, value: 16}
+        ArmorPart_Torso: {type: :byte, value: 39}
         BaseItem: {type: :int, value: 16}
         Charges: {type: :byte, value: 0}
-        Cloth1Color: {type: :byte, value: 1}
-        Cloth2Color: {type: :byte, value: 7}
-        Cost: {type: :dword, value: 1000}
+        Cloth1Color: {type: :byte, value: 7}
+        Cloth2Color: {type: :byte, value: 34}
+        Cost: {type: :dword, value: 10}
         Cursed: {type: :byte, value: 0}
         DescIdentified: 
           type: :cexolocstr
@@ -81,16 +104,16 @@ Creature List:
           type: :cexolocstr
           value: {}
 
-        Identified: {type: :byte, value: 0}
-        Leather1Color: {type: :byte, value: 1}
-        Leather2Color: {type: :byte, value: 7}
+        Identified: {type: :byte, value: 1}
+        Leather1Color: {type: :byte, value: 7}
+        Leather2Color: {type: :byte, value: 4}
         LocalizedName: 
           type: :cexolocstr
-          str_ref: 12835
+          str_ref: 12928
           value: {}
 
-        Metal1Color: {type: :byte, value: 0}
-        Metal2Color: {type: :byte, value: 8}
+        Metal1Color: {type: :byte, value: 20}
+        Metal2Color: {type: :byte, value: 16}
         Plot: {type: :byte, value: 0}
         PropertiesList: 
           type: :list
@@ -98,8 +121,8 @@ Creature List:
 
         StackSize: {type: :word, value: 1}
         Stolen: {type: :byte, value: 0}
-        Tag: {type: :cexostr, value: NW_AARCL001}
-        TemplateResRef: {type: :resref, value: nw_aarcl001}
+        Tag: {type: :cexostr, value: NW_CLOTH027}
+        TemplateResRef: {type: :resref, value: nw_cloth027}
         XOrientation: {type: :float, value: 0.0}
         XPosition: {type: :float, value: -1.0}
         YOrientation: {type: :float, value: 1.0}
@@ -148,7 +171,7 @@ Creature List:
     PerceptionRange: {type: :byte, value: 11}
     Phenotype: {type: :int, value: 0}
     Plot: {type: :byte, value: 0}
-    PortraitId: {type: :word, value: 129}
+    PortraitId: {type: :word, value: 312}
     Race: {type: :byte, value: 1}
     ScriptAttacked: {type: :resref, value: nw_c2_default5}
     ScriptDamaged: {type: :resref, value: nw_c2_default6}
@@ -194,6 +217,7 @@ Creature List:
       - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
       - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
       - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
     SoundSetFile: {type: :word, value: 171}
     SpecAbilityList: 
       type: :list
@@ -213,9 +237,9 @@ Creature List:
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 10}
     XOrientation: {type: :float, value: 0.7883}
-    XPosition: {type: :float, value: 19.6415}
+    XPosition: {type: :float, value: 19.7152}
     YOrientation: {type: :float, value: 0.6152}
-    YPosition: {type: :float, value: 46.4811}
+    YPosition: {type: :float, value: 46.6087}
     ZPosition: {type: :float, value: -0.0}
     fortbonus: {type: :short, value: 0}
     refbonus: {type: :short, value: 0}
@@ -293,7 +317,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     CloseLockDC: {type: :byte, value: 40}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 15}
@@ -358,7 +382,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     CloseLockDC: {type: :byte, value: 40}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 15}
@@ -376,8 +400,8 @@ Door List:
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: key_bognerei}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: keller_bognerei}
-    LinkedToFlags: {type: :byte, value: 1}
+    LinkedTo: {type: :cexostr, value: WP_keller_bognerei}
+    LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
@@ -1442,7 +1466,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 439}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: Disp_herb001}
     TemplateResRef: {type: :resref, value: disp_herb001}
     TrapDetectDC: {type: :byte, value: 0}
@@ -1452,7 +1476,7 @@ Placeable List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 1}
+    Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 28.1377}
     Y: {type: :float, value: 41.0487}
@@ -1505,7 +1529,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 439}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: Disp_herb001}
     TemplateResRef: {type: :resref, value: disp_herb001}
     TrapDetectDC: {type: :byte, value: 0}
@@ -1515,7 +1539,7 @@ Placeable List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 1}
+    Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 27.7181}
     Y: {type: :float, value: 40.8058}
@@ -1568,7 +1592,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 439}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: Disp_herb001}
     TemplateResRef: {type: :resref, value: disp_herb001}
     TrapDetectDC: {type: :byte, value: 0}
@@ -1578,7 +1602,7 @@ Placeable List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 1}
+    Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 28.0074}
     Y: {type: :float, value: 40.7687}
@@ -1631,7 +1655,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 439}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: Disp_herb001}
     TemplateResRef: {type: :resref, value: disp_herb001}
     TrapDetectDC: {type: :byte, value: 0}
@@ -1641,7 +1665,7 @@ Placeable List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 1}
+    Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 27.8857}
     Y: {type: :float, value: 40.7267}
