Bank: fix AT B -> Z
refs #450

--- a/mod/area/gabel_bank.git.yml
+++ b/mod/area/gabel_bank.git.yml
@@ -1138,8 +1138,8 @@ Door List:
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: key_bank}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: gabel_zentrum_2_gabel_bank}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
