--- a/mod/uti/m_gp0.uti.yml
+++ b/mod/uti/m_gp0.uti.yml
@@ -20,7 +20,7 @@ Identified: {type: :byte, value: 1}
 LocalizedName: 
   type: :cexolocstr
   value: 
-    0: "Goldm\xFCnze"
+    0: "Goldl\xF6we"
 ModelPart1: {type: :byte, value: 6}
 PaletteID: {type: :byte, value: 54}
 Plot: {type: :byte, value: 0}
