Currency: support lots of colourful denominations
refs #397

--- a/mod/uti/m_sp1.uti.yml
+++ b/mod/uti/m_sp1.uti.yml
@@ -5,23 +5,23 @@ AddCost: {type: :dword, value: 0}
 BaseItem: {type: :int, value: 218}
 Charges: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 1000}
+Cost: {type: :dword, value: 1}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
   value: 
-    0: "Die Goldm\xFCnze ist ist die Standardw\xE4hrung unter Handelstreibenden und Abenteurern. Sie bezahlt f\xFCr jeden und alles, was \xFCber den Tresen geht und ist f\xFCr einfache Bauern ein Verm\xF6gen.\n\n\
-      Dieser ist eine Goldm\xFCnze der Silbermarken, mit einer Pr\xE4gung aus Silbrigmond."
+    0: "Der Silberfalke ist die Standardw\xE4hrung unter kleineren H\xE4ndlern und Reisenden. Er bezahlt f\xFCr Unterkunft, Verpflegung und Geleitschutz zuverl\xE4ssig und tadellos, ungeachtet vonPr\xE4gung oder Form.\n\n\
+      Dieser ist ein Silberfalke des Westens, mit einer Pr\xE4gung aus Luskan."
 Description: 
   type: :cexolocstr
-  value: {}
-
+  value: 
+    0: ""
 Identified: {type: :byte, value: 1}
 LocalizedName: 
   type: :cexolocstr
   value: 
-    0: "Goldl\xF6we"
-ModelPart1: {type: :byte, value: 5}
+    0: Zauberrad
+ModelPart1: {type: :byte, value: 13}
 PaletteID: {type: :byte, value: 54}
 Plot: {type: :byte, value: 1}
 PropertiesList: 
@@ -30,5 +30,5 @@ PropertiesList:
 
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: COIN_0100}
-TemplateResRef: {type: :resref, value: m_gp0}
+Tag: {type: :cexostr, value: COIN_0010}
+TemplateResRef: {type: :resref, value: m_sp1}
