--- a/mod/uti/m_ep0.uti.yml
+++ b/mod/uti/m_ep0.uti.yml
@@ -5,23 +5,23 @@ AddCost: {type: :dword, value: 0}
 BaseItem: {type: :int, value: 218}
 Charges: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 1000}
+Cost: {type: :dword, value: 1}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
   value: 
-    0: "Die Goldm\xFCnze ist ist die Standardw\xE4hrung unter Handelstreibenden und Abenteurern. Sie bezahlt f\xFCr jeden und alles, was \xFCber den Tresen geht und ist f\xFCr einfache Bauern ein Verm\xF6gen.\n\n\
-      Dieser ist eine Goldm\xFCnze der Silbermarken, mit einer Pr\xE4gung aus Silbrigmond."
+    0: "Der Blaustern ist eine gebr\xE4uchliche M\xFCnze aus Elektrum, einer Legierung von Silber und Gold. Ein Blaustern wiegt allermeist meist f\xFCnf Goldl\xF6wen auf.\n\n\
+      Dieser Blaustern tr\xE4gt Luskaner Pr\xE4gung."
 Description: 
   type: :cexolocstr
-  value: {}
-
+  value: 
+    0: ""
 Identified: {type: :byte, value: 1}
 LocalizedName: 
   type: :cexolocstr
   value: 
-    0: "Goldl\xF6we"
-ModelPart1: {type: :byte, value: 5}
+    0: Blaustern
+ModelPart1: {type: :byte, value: 10}
 PaletteID: {type: :byte, value: 54}
 Plot: {type: :byte, value: 1}
 PropertiesList: 
@@ -30,5 +30,5 @@ PropertiesList:
 
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: COIN_0100}
-TemplateResRef: {type: :resref, value: m_gp0}
+Tag: {type: :cexostr, value: COIN_0500}
+TemplateResRef: {type: :resref, value: m_ep0}
