--- a/mod/uti/m_toal.uti.yml
+++ b/mod/uti/m_toal.uti.yml
@@ -5,23 +5,22 @@ AddCost: {type: :dword, value: 0}
 BaseItem: {type: :int, value: 218}
 Charges: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 1000}
+Cost: {type: :dword, value: 1}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
   value: 
-    0: "Die Goldm\xFCnze ist ist die Standardw\xE4hrung unter Handelstreibenden und Abenteurern. Sie bezahlt f\xFCr jeden und alles, was \xFCber den Tresen geht und ist f\xFCr einfache Bauern ein Verm\xF6gen.\n\n\
-      Dieser ist eine Goldm\xFCnze der Silbermarken, mit einer Pr\xE4gung aus Silbrigmond."
+    0: "Eine rechteckige M\xFCnze aus Messing, normalerweise in der Stadt Tiefwasser gehandelt, doch \xFCber ganz Faerun verbreitet. Sie entspricht dem Wert von zwei Goldl\xF6wen."
 Description: 
   type: :cexolocstr
-  value: {}
-
+  value: 
+    0: ""
 Identified: {type: :byte, value: 1}
 LocalizedName: 
   type: :cexolocstr
   value: 
-    0: "Goldl\xF6we"
-ModelPart1: {type: :byte, value: 5}
+    0: Toal
+ModelPart1: {type: :byte, value: 2}
 PaletteID: {type: :byte, value: 54}
 Plot: {type: :byte, value: 1}
 PropertiesList: 
@@ -30,5 +29,5 @@ PropertiesList:
 
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: COIN_0100}
-TemplateResRef: {type: :resref, value: m_gp0}
+Tag: {type: :cexostr, value: COIN_0200}
+TemplateResRef: {type: :resref, value: m_toal}
