--- a/mod/itp/creaturepalcus.itp.yml
+++ b/mod/itp/creaturepalcus.itp.yml
@@ -3128,6 +3128,12 @@ MAIN:
               - !nwn-lib.elv.es,2008-12/struct 
                 __struct_id: 0
                 CR: {type: :float, value: 5.0}
+                FACTION: {type: :cexostr, value: Commoner}
+                NAME: {type: :cexostr, value: Bankier}
+                RESREF: {type: :resref, value: bankier}
+              - !nwn-lib.elv.es,2008-12/struct 
+                __struct_id: 0
+                CR: {type: :float, value: 5.0}
                 FACTION: {type: :cexostr, value: Hostile}
                 NAME: {type: :cexostr, value: Zombie}
                 RESREF: {type: :resref, value: zombie}
