--- a/mod/itp/itempalcus.itp.yml
+++ b/mod/itp/itempalcus.itp.yml
@@ -7439,6 +7439,10 @@ MAIN:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
+        NAME: {type: :cexostr, value: Adelsfandar}
+        RESREF: {type: :resref, value: m_cp3}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
         NAME: {type: :cexostr, value: "Beschw\xF6rerrune: Stufe 1 -  Celestische Eule"}
         RESREF: {type: :resref, value: sum_cardp038}
       - !nwn-lib.elv.es,2008-12/struct 
@@ -7795,8 +7799,16 @@ MAIN:
         RESREF: {type: :resref, value: sum_cardp181}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
+        NAME: {type: :cexostr, value: Blaustern}
+        RESREF: {type: :resref, value: m_ep0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
         NAME: {type: :cexostr, value: Buch der Zauber}
         RESREF: {type: :resref, value: art_book_spells}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Dreikrone}
+        RESREF: {type: :resref, value: m_tricrown}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
         NAME: {type: :cexostr, value: "Druidenrune: Stufe 1 -  Schreckensratte"}
@@ -8051,6 +8063,10 @@ MAIN:
         RESREF: {type: :resref, value: eskaelda}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
+        NAME: {type: :cexostr, value: Fandar}
+        RESREF: {type: :resref, value: m_cp2}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
         NAME: {type: :cexostr, value: Flasche}
         RESREF: {type: :resref, value: potion_of_poison}
       - !nwn-lib.elv.es,2008-12/struct 
@@ -8063,6 +8079,34 @@ MAIN:
         RESREF: {type: :resref, value: stone_of_weight}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
+        NAME: {type: :cexostr, value: "Goldl\xF6we"}
+        RESREF: {type: :resref, value: m_gp0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Gondglocke}
+        RESREF: {type: :resref, value: m_gondbell}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: "Gr\xFCn"}
+        RESREF: {type: :resref, value: m_cp4}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Handelsbrief des Harmonium}
+        RESREF: {type: :resref, value: m_note0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Handelsbrief des Harmonium}
+        RESREF: {type: :resref, value: m_note1}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Kupferdaumen}
+        RESREF: {type: :resref, value: m_cp1}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Kupferling}
+        RESREF: {type: :resref, value: m_cp0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
         NAME: {type: :cexostr, value: M7 Pulse Ammo}
         RESREF: {type: :resref, value: m7_bolt}
       - !nwn-lib.elv.es,2008-12/struct 
@@ -8073,6 +8117,14 @@ MAIN:
         __struct_id: 0
         NAME: {type: :cexostr, value: Magische Granate}
         RESREF: {type: :resref, value: mag_gren}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: "M\xF6bius"}
+        RESREF: {type: :resref, value: m_cod_moebius}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Platindrache}
+        RESREF: {type: :resref, value: m_pp0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
         NAME: {type: :cexostr, value: Pod}
@@ -8091,12 +8143,48 @@ MAIN:
         RESREF: {type: :resref, value: sum_cardbag001}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
+        NAME: {type: :cexostr, value: Silberfalke}
+        RESREF: {type: :resref, value: m_sp0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Silberfalke}
+        RESREF: {type: :resref, value: m_sp003}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Silberfalke}
+        RESREF: {type: :resref, value: m_sp2}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
         NAME: {type: :cexostr, value: "Stinkendes Gew\xFCrz"}
         RESREF: {type: :resref, value: bugpodp}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
+        NAME: {type: :cexostr, value: Tanar}
+        RESREF: {type: :resref, value: m_gp1}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Toal}
+        RESREF: {type: :resref, value: m_toal}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Toal (gelocht)}
+        RESREF: {type: :resref, value: m_toalh}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Torus}
+        RESREF: {type: :resref, value: m_cod_torus}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
         NAME: {type: :cexostr, value: Wanderstab}
         RESREF: {type: :resref, value: changestaff}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: Zauberrad}
+        RESREF: {type: :resref, value: m_sp1}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        NAME: {type: :cexostr, value: "Zw\xF6lftelmond"}
+        RESREF: {type: :resref, value: m_rashemi}
     STRREF: {type: :dword, value: 6808}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
