--- a/mod/itp/placeablepalcus.itp.yml
+++ b/mod/itp/placeablepalcus.itp.yml
@@ -3025,6 +3025,10 @@ MAIN:
         RESREF: {type: :resref, value: pvq_1872}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
+        NAME: {type: :cexostr, value: Tree}
+        RESREF: {type: :resref, value: pvq_202}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
         NAME: {type: :cexostr, value: Tree_1}
         RESREF: {type: :resref, value: pvq_1829}
       - !nwn-lib.elv.es,2008-12/struct 
