currency: Goldloewe: remove factually wrong sentence from desc

--- a/mod/uti/m_gp1.uti.yml
+++ b/mod/uti/m_gp1.uti.yml
@@ -10,7 +10,7 @@ Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
   value: 
-    0: "Die Goldm\xFCnze ist ist die Standardw\xE4hrung unter Handelstreibenden und Abenteurern. Sie bezahlt f\xFCr jeden und alles, was \xFCber den Tresen geht und ist f\xFCr einfache Bauern ein Verm\xF6gen.\n\n\
+    0: "Die Goldm\xFCnze ist ist die Standardw\xE4hrung unter Handelstreibenden und Abenteurern. Sie bezahlt f\xFCr jeden und alles, was \xFCber den Tresen geht.\n\n\
       Dieser ist eine Goldm\xFCnze aus Amn."
 Description: 
   type: :cexolocstr
