Lampenladen: unlock pers container

--- a/mod/area/gabel_cassandra.git.yml
+++ b/mod/area/gabel_cassandra.git.yml
@@ -14803,7 +14803,7 @@ Placeable List:
     Hardness: {type: :byte, value: 5}
     HasInventory: {type: :byte, value: 0}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: key_legion}
+    KeyName: {type: :cexostr, value: ""}
     KeyRequired: {type: :byte, value: 0}
     LocName: 
       type: :cexolocstr
@@ -14811,7 +14811,7 @@ Placeable List:
       value: 
         0: Wandschrank
     Lockable: {type: :byte, value: 1}
-    Locked: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
     OnClosed: {type: :resref, value: ""}
     OnDamaged: {type: :resref, value: ""}
